--- a/app/assets/stylesheets/modules/generator.scss
+++ b/app/assets/stylesheets/modules/generator.scss
@@ -1,3 +1,6 @@
+*::-webkit-scrollbar {
+    width: 0px;
+}
 #wrapper{
 	position: absolute;
 	top:0%;
@@ -11,8 +14,15 @@
 }
 
 #workspace{
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
 	height: 80%;
 	width: 100%;
+	overflow-y:scroll;
 	
 }
 #input_wrp{
@@ -75,7 +85,7 @@
 .category_wrp{
 	display: flex;
 	flex-direction: column;
-	height: 200px;
+	height: 350px;
 	width: 100%;
 }
 
@@ -83,8 +93,9 @@
 	display: flex;
 	justify-content: flex-start;
 	flex-wrap: wrap;
-	height: 150px;
+	height: 300px;
 	width: 100%;
+	overflow:hidden;
 }
 
 .panel{
@@ -117,8 +128,22 @@
 }
 
 .module{
-	height: 150px;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+	padding-top: 65px;
+	text-align:center;
+	color:white;
+	font-size: 15pt;
+	font-family: 'arial';
+	height: 85px;
 	width: 25%;
+}
+.module *{
+	margin-top: 40%;
 }
 
 #rework_container{
